--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "mongoose": "^5.10.0",
     "path": "^0.12.7",
     "randomstring": "1.1.5",
-    "socket.io": "2.2.0",
+    "socket.io": ">=2.4.0",
     "underscore": "1.9.1",
     "validator": "11.0.0"
   },
